--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
-Package: PLSDA.replication 
+Package: MetaboAnalystR.replicationproject
 Title: Replicating the MetaboAnalystR package
 Version: 0.0.0.9000
 Authors@R: person("Usman", "Faryal", email = "fusman@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0001-8135-5919")),
-           person("Sagar", "Medha", email = "placeholder@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0001-9942-9429")),
-           person("Gupta", "Sanjana", email = "placeholder2@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0002-6985-4640")),
-           person("Tullock", "Adrian", email = "placeholde3r@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0001-6378-3098")),
-           person("Maracaccio", "Florencia", email = "placeholder4@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0003-3650-1483"))
+           person("Sagar", "Medha", email = "sagarme@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0001-9942-9429")),
+           person("Gupta", "Sanjana", email = "sgupta4@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0002-6985-4640")),
+           person("Tullock", "Adrian", email = "adrianmt@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0001-6378-3098")),
+           person("Maracaccio", "Florencia", email = "fmarca@uw.edu", role = c("aut", cre"), comment = c(ORCID = "0000-0003-3650-1483"))
 Description: Replicating the PLS-DA class separation figures by Xia, J., Psychogios, N., Young, N., & Wishart, D. S. (2009) using their R package MetaboAnalystR.
+URL: https://github.com/UW-MSDS-DATA-598-Reproducibility-WI20/gupta-marcaccio-sagar-tullock-usman-replication-project
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
