--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:c(
            person("Usman", "Faryal", email = "fusman@uw.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8135-5919")),
            person("Sagar", "Medha", email = "sagarme@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0001-9942-9429")),
            person("Gupta", "Sanjana", email = "sgupta4@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0002-6985-4640")),
-           person("Tullock", "Adrian", email = "adrianmt@uw.edu", role = c("aut""), comment = c(ORCID = "0000-0001-6378-3098")),
+           person("Tullock", "Adrian", email = "adrianmt@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0001-6378-3098")),
            person("Marcaccio", "Florencia", email = "fmarca@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0003-3650-1483")))
 Description: Replicating the PLS-DA class separation figures by Xia, J., Psychogios, N., Young, N., & Wishart, D. S. (2009) using their R package MetaboAnalystR.
 URL: https://github.com/UW-MSDS-DATA-598-Reproducibility-WI20/gupta-marcaccio-sagar-tullock-usman-replication-project
