--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MetaboAnalystR.replicationproject
 Title: Replicating the MetaboAnalystR package
 Version: 0.0.0.9000
-Authors@R:c(
+Authors@R: c(
            person("Usman", "Faryal", email = "fusman@uw.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8135-5919")),
            person("Sagar", "Medha", email = "sagarme@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0001-9942-9429")),
            person("Gupta", "Sanjana", email = "sgupta4@uw.edu", role = c("aut"), comment = c(ORCID = "0000-0002-6985-4640")),
@@ -14,4 +14,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-
+RoxygenNote: 7.0.2
