--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: MetaboAnalystR.replicationproject
+Package: compendium
 Title: Replicating the MetaboAnalystR package
 Version: 0.0.0.9000
 Authors@R: c(
